# captures

./: .gitignore  CRATES.md  Cargo.toml  README.md
src/: changes.rs  clean.rs  lib.rs  parse.rs
tests/: hygiene.rs  infer_move.rs  refs.rs  trybuild.rs
tests/compile_fail/: anti_2021_borrows.rs  anti_2021_borrows.stderr  hygiene.rs  hygiene.stderr  infer_move.rs  infer_move.stderr  no_clone.rs  no_clone.stderr  syntax.rs  syntax.stderr
