[package]
name = "captures"
description = "Provides macros to express more powerful closure captures"
authors = ["Jakob Degen <jakob@degen.com>"]

version = "0.1.0"
edition = "2021"
rust-version = "1.56"

license = "MIT OR Apache-2.0"
readme = "CRATES.md"

documentation = "https://docs.rs/captures"
repository = "https://github.com/JakobDegen/captures"

categories = ["rust-patterns", "no-std"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", default-features = false, features = ["full", "parsing", "printing", "visit-mut"]}
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
